Bug 255002 - [ANGLE] Speculative fix for div-by-zero in DispatchCompute
Summary: [ANGLE] Speculative fix for div-by-zero in DispatchCompute
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: ANGLE (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Dan Glastonbury
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-04-04 12:26 PDT by Dan Glastonbury
Modified: 2023-04-04 22:07 PDT (History)
4 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dan Glastonbury 2023-04-04 12:26:54 PDT
On some CPU configurations, divide-by-zero raises an exception. To avoid
dividing by zero on devices that don't have non-uniform dispatch, clamp
numThreads between 1 and threadExecutionWidth.
Comment 1 Dan Glastonbury 2023-04-04 12:27:38 PDT
rdar://problem/106789544
Comment 2 Dan Glastonbury 2023-04-04 12:32:30 PDT
Pull request: https://github.com/WebKit/WebKit/pull/12388
Comment 3 EWS 2023-04-04 22:07:55 PDT
Committed 262609@main (e6c30af4dc92): <https://commits.webkit.org/262609@main>

Reviewed commits have been landed. Closing PR #12388 and removing active labels.