[ANGLE] Speculative fix for div-by-zero in DispatchCompute https://bugs.webkit.org/show_bug.cgi?id=255002 rdar://problem/106789544

Reviewed by Dean Jackson.

On some CPU configurations, divide-by-zero raises an exception. To avoid
dividing by zero on devices that don't have non-uniform dispatch, clamp
numThreads between 1 and threadExecutionWidth.

* Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/mtl_render_utils.mm:

Canonical link: https://commits.webkit.org/262609@main